# pacmof2

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
examples/ionic_MOFs/: get_charges_ionic.py  net_charges.json
examples/ionic_MOFs/ddec/: JAMLAL_with_charge.cif  UCIBAK_with_charge.cif
examples/ionic_MOFs/pacmof/: JAMLAL_with_charge_pacmof.cif  UCIBAK_with_charge_pacmof.cif
examples/neutral_MOFs/: features_neutral.csv  get_charges_neutral.py  test_pacmof-ionic.py
examples/neutral_MOFs/ddec/: GIFFEI_clean_DDEC.cif  LASYOU_clean_DDEC.cif  NU_1000.cif  UIO-66.cif
examples/neutral_MOFs/pacmof/: NU_1000_pacmof.cif  UIO-66_pacmof.cif
pacmof2/: __init__.py  pacmof2.py  parameters.py
