[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pacmof2"
version = "1.0.0"
authors = [
  { name="Thang Pham", email="thangpham2024@u.northwestern.edu" },
]
dependencies = [
    "ase>=3.22",
    "pymatgen>=2023.9.25",
    "scikit-learn==1.3.0"
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.setuptools]
include-package-data = true

